fix landing page footer off center

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -44,15 +44,15 @@ main {
 }
 
 nav,
-main,
-footer {
+header ~ main,
+header ~ footer {
   padding-left: 300px;
 }
 
 @media only screen and (max-width: 992px) {
   nav,
-  main,
-  footer {
+  header ~ main,
+  header ~ footer {
     padding-left: 0;
   }
 }
